language/move-lang/tests/move_check/typing/global_builtins_invalid.exp
error: 

   ┌── tests/move_check/typing/global_builtins_invalid.move:5:24 ───
   │
 5 │         let _ : bool = exists<R>();
   │                        ^^^^^^^^^^^ Invalid call of 'exists'. The call of 'exists' expected 1 argument(s) but got 0
   ·
 5 │         let _ : bool = exists<R>();
   │                                 -- Found 0 arguments here
   │

error: 

   ┌── tests/move_check/typing/global_builtins_invalid.move:6:18 ───
   │
 6 │         let () = move_to_sender<R>();
   │                  ^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to_sender'. The call of 'move_to_sender' expected 1 argument(s) but got 0
   ·
 6 │         let () = move_to_sender<R>();
   │                                   -- Found 0 arguments here
   │

error: 

   ┌── tests/move_check/typing/global_builtins_invalid.move:7:22 ───
   │
 7 │         let _ : &R = borrow_global<R>();
   │                      ^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global'. The call of 'borrow_global' expected 1 argument(s) but got 0
   ·
 7 │         let _ : &R = borrow_global<R>();
   │                                      -- Found 0 arguments here
   │

error: 

   ┌── tests/move_check/typing/global_builtins_invalid.move:8:26 ───
   │
 8 │         let _ : &mut R = borrow_global_mut<R>();
   │                          ^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global_mut'. The call of 'borrow_global_mut' expected 1 argument(s) but got 0
   ·
 8 │         let _ : &mut R = borrow_global_mut<R>();
   │                                              -- Found 0 arguments here
   │

error: 

   ┌── tests/move_check/typing/global_builtins_invalid.move:9:20 ───
   │
 9 │         let R {} = move_from<R>();
   │                    ^^^^^^^^^^^^^^ Invalid call of 'move_from'. The call of 'move_from' expected 1 argument(s) but got 0
   ·
 9 │         let R {} = move_from<R>();
   │                                -- Found 0 arguments here
   │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:13:24 ───
    │
 13 │         let _ : bool = exists<R>(0);
    │                        ^^^^^^^^^^^^ Invalid call of 'exists'. Invalid argument for parameter '0'
    ·
 13 │         let _ : bool = exists<R>(0);
    │                                  - The type: 'u64'
    ·
 13 │         let _ : bool = exists<R>(0);
    │                        ------ Is not compatible with: 'address'
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:14:18 ───
    │
 14 │         let () = move_to_sender<R>(0);
    │                  ^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to_sender'. Invalid argument for parameter '0'
    ·
 14 │         let () = move_to_sender<R>(0);
    │                                    - The type: 'u64'
    ·
 14 │         let () = move_to_sender<R>(0);
    │                                 - Is not compatible with: '0x8675309::M::R'
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:15:18 ───
    │
 15 │         let () = move_to_sender(0);
    │                  ^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 15 │         let () = move_to_sender(0);
    │                                 - Expected a nominal resource. Found the type: u64
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:16:22 ───
    │
 16 │         let _ : &R = borrow_global<R>(0);
    │                      ^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global'. Invalid argument for parameter '0'
    ·
 16 │         let _ : &R = borrow_global<R>(0);
    │                                       - The type: 'u64'
    ·
 16 │         let _ : &R = borrow_global<R>(0);
    │                      ------------- Is not compatible with: 'address'
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:17:26 ───
    │
 17 │         let _ : &mut R = borrow_global_mut<R>(0);
    │                          ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global_mut'. Invalid argument for parameter '0'
    ·
 17 │         let _ : &mut R = borrow_global_mut<R>(0);
    │                                               - The type: 'u64'
    ·
 17 │         let _ : &mut R = borrow_global_mut<R>(0);
    │                          ----------------- Is not compatible with: 'address'
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:18:20 ───
    │
 18 │         let R {} = move_from<R>(0);
    │                    ^^^^^^^^^^^^^^^ Invalid call of 'move_from'. Invalid argument for parameter '0'
    ·
 18 │         let R {} = move_from<R>(0);
    │                                 - The type: 'u64'
    ·
 18 │         let R {} = move_from<R>(0);
    │                    --------- Is not compatible with: 'address'
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:22:24 ───
    │
 22 │         let _ : bool = exists<R>(0x0, 0);
    │                        ^^^^^^^^^^^^^^^^^ Invalid call of 'exists'. The call of 'exists' expected 1 argument(s) but got 2
    ·
 22 │         let _ : bool = exists<R>(0x0, 0);
    │                                 -------- Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:23:18 ───
    │
 23 │         let () = move_to_sender<R>(R{}, 0);
    │                  ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to_sender'. The call of 'move_to_sender' expected 1 argument(s) but got 2
    ·
 23 │         let () = move_to_sender<R>(R{}, 0);
    │                                   -------- Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:24:18 ───
    │
 24 │         let () = move_to_sender(R{}, 0);
    │                  ^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to_sender'. The call of 'move_to_sender' expected 1 argument(s) but got 2
    ·
 24 │         let () = move_to_sender(R{}, 0);
    │                                -------- Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:25:22 ───
    │
 25 │         let _ : &R = borrow_global<R>(0x0, false);
    │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global'. The call of 'borrow_global' expected 1 argument(s) but got 2
    ·
 25 │         let _ : &R = borrow_global<R>(0x0, false);
    │                                      ------------ Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:26:26 ───
    │
 26 │         let _ : &mut R = borrow_global_mut<R>(0x0, true);
    │                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'borrow_global_mut'. The call of 'borrow_global_mut' expected 1 argument(s) but got 2
    ·
 26 │         let _ : &mut R = borrow_global_mut<R>(0x0, true);
    │                                              ----------- Found 2 arguments here
    │

error: 

    ┌── tests/move_check/typing/global_builtins_invalid.move:27:20 ───
    │
 27 │         let R {} = move_from<R>(0x0, 0);
    │                    ^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_from'. The call of 'move_from' expected 1 argument(s) but got 2
    ·
 27 │         let R {} = move_from<R>(0x0, 0);
    │                                -------- Found 2 arguments here
    │

